# confluent-schema-registry-rs

./: Cargo.toml  LICENSE  readme.md
src/: deserializer.rs  encoder.rs  error.rs  lib.rs  schema.rs  schema_registry.rs  serializer.rs
tests/: integration.rs
