[package]
name = "confluent_schema_registry"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = ["logging"]
tracing = ["trace"]
proto = ["protobuf"]
avro = ["avro_rs"]

[dependencies]
thiserror = "^1.0"
serde = "^1.0"
dashmap = "^4.0"
reqwest = "^0.10"

trace = { version = "^0.1", optional = true, package = "tracing" }
logging = { version = "^0.4", optional = true, package = "log" }
protobuf = { version = "^2.22", optional = true }
avro_rs = { version = "^0.2", optional = true, package = "avro-rs"}
