[package]
name = "confluent_schema_registry"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["avro"]
log = ["logging"]
tracing = ["trace"]
proto = ["protobuf"]
avro = ["avro_rs"]

[dependencies]
thiserror = "^1.0"
serde = "^1.0"
dashmap = "^4.0"
reqwest = { version = "^0.11", features = ["json"] } 

trace = { version = "^0.1", optional = true, package = "tracing" }
logging = { version = "^0.4", optional = true, package = "log" }
protobuf = { version = "^2.22", optional = true }
avro_rs = { version = "^0.13", optional = true, package = "avro-rs" }
lazy_static = "^1.4"
serde_json = "1.0.64"
futures-locks = "0.6.0"

[dev-dependencies]
anyhow = "1.0.38"
tokio = { version = "1.2.0", features = ["full"] }
chrono = "0.4.19"
schema_registry_converter = { version = "2.0.2", default-features = false, features = ["futures", "avro"] }
